<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".AlphabetActivity">

    <TextView
        android:id="@+id/txtAlphabetHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="casual"
        android:text="@string/alphabetActivity"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAlphabetPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spellingEditText"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:fontFamily="casual"
        android:text="@string/submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/spellingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spellingEditText" />

    <EditText
        android:id="@+id/spellingEditText"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="60dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/alphabetPrompt"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAlphabetBack"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <Button
        android:id="@+id/btnAlphabetBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="casual"
        android:text="Back to Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spellingEditText" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="353dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="123dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spellingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAlphabet" />

    <TextView
        android:id="@+id/txtLetter"
        android:layout_width="339dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="41dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgAlphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlphabetHeader" />

    <ImageView
        android:id="@+id/imgAlphabet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLetter" />

</androidx.constraintlayout.widget.ConstraintLayout>