<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".NumbersActivity">

    <ImageView
        android:id="@+id/imgNumbers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#0F9E00"
        android:textSize="28sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/txtNumbersPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNumbers" />

    <Button
        android:id="@+id/btnNumbers2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/btnNumbers4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNumbers1"
        app:layout_constraintTop_toBottomOf="@+id/txtNumbersPrompt" />

    <Button
        android:id="@+id/btnNumbers1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="9dp"
        android:fontFamily="casual"
        app:layout_constraintEnd_toStartOf="@+id/btnNumbers2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumbersPrompt" />

    <Button
        android:id="@+id/btnNumbers3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="9dp"
        android:fontFamily="casual"
        app:layout_constraintEnd_toStartOf="@+id/btnNumbers4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumbers1" />

    <Button
        android:id="@+id/btnNumbers4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="153dp"
        android:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/btnNumbersBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNumbers3"
        app:layout_constraintTop_toBottomOf="@+id/btnNumbers2" />

    <TextView
        android:id="@+id/txtNumbersPrompt"
        android:layout_width="275dp"
        android:layout_height="46dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="casual"
        android:text="@string/numberPrompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNumbers2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="casual"
        android:text="@string/numbersActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primaryText"
        app:layout_constraintBottom_toTopOf="@+id/imgNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNumbersBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumbers4" />

</androidx.constraintlayout.widget.ConstraintLayout>